--- a/index.html
+++ b/index.html
@@ -1,49 +1,68 @@
-<!DOCTYPE HTML>
-<html lang="en">
-    <head>
-        <title>Clumsy Bird</title>
-        <link rel="apple-touch-icon-precomposed" href="data/img/touch-icon-iphone.png"/>
-        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="data/img/touch-icon-iphone-retina.png"/>
-        <link rel="shortcut icon" href="data/img/favicon.ico">
-        <link rel="stylesheet" type="text/css" media="screen" href="index.css">
-        <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black">
-        <meta name="apple-mobile-web-app-title" content="Clumsy Bird">
-        <meta charset="UTF-8" />
-        <meta name="description" content="Clumsy Bird - A Flappy Bird clone using MelonJS"/>
-        <meta name="keywords" content="flappybird, flappy, bird, game, html5, melonjs,clone"/>
-        <meta name="robots" content="index, follow">
-        <meta name="google-site-verification" content="RDZI9SqVaffd48uHfZMv67-YdvviOMe2HuULEYqVgd4" />
-        <meta property="og:image" content="http://ellisonleao.github.io/clumsy-bird/data/img/bg.png" />
-        <meta property="og:title" content="Clumsy Bird - A Flappy Bird clone using MelonJS"/>
-        <meta property="og:url" content="http://ellisonleao.github.io/clumsy-bird/"/>
-        <meta property="og:site_name" content="Clumsy Bird - MelonJS"/>
+<!DOCTYPE html>
+<html lang="no">
+  <head>
+    <title>Marias skjerf</title>
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="data/img/touch-icon-iphone.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="120x120"
+      href="data/img/touch-icon-iphone-retina.png"
+    />
+    <link rel="shortcut icon" href="data/img/favicon.ico" />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <meta
+      id="viewport"
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Marias skjerf" />
+    <meta charset="UTF-8" />
 
-        <!-- Twitter Card -->
-        <meta name="twitter:hashtag" content="clumsybird" />
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:site" content="@ellisonleao" />
-        <meta name="twitter:creator" content="@ellisonleao" />
-        <meta name="twitter:title" content="Clumsy Bird" />
-        <meta name="twitter:description" content="A Flappy Bird melonJS clone" />
+    <!-- Humans -->
+    <link rel="author" href="humans.txt" />
+  </head>
 
-        <!-- Humans -->
-        <link rel="author" href="humans.txt" />
-    </head>
+  <body>
+    <!--
+        /* ORIGINAL CODE */
+        Developer: Ellison Leão 
+        Site: https://ellisonleao.github.io, https://github.com/ellisonleao
+        Twitter: @ellisonleao
+        Location: Curitiba, Brazil
 
-    <body>
-        <!-- Canvas placeholder -->
-        <div id="screen"></div>
+        /* SITE */
+        Last Update: 2014/03/06
+        Standards: HTML5, CSS3
+        Components: MelonJS, jQuery
+        Software: VIM, Photoshop
 
-        <!-- melonJS Library -->
-        <script type="text/javascript" src="js/melonJS-min.js" ></script>
-        <script type="text/javascript" src="build/clumsy-min.js" ></script>
-        <script type="text/javascript">
-            window.onReady(function onReady() {
-                game.onload();
-            });
-        </script>
+        /* NEW CODE */
+        Developer: Maria's secret santa
+        Location: Somewhere between Oslo and the North Pole
 
-    </body>
+        /* MUSIC */
+        FeSTV FRLiX: Shane Ivers, https://www.silvermansound.com
+
+        /* TEXTURES */
+        Cloud Tileset.png: ohnoponogames, https://ohnoponogames.itch.io/retro-cloud-tileset
+        Pixel Tree: Davide Pesce, https://www.davidepesce.com/2020/03/26/nature-pixel-art-tutorial-1-simple-tree/
+    -->
+
+    <!-- Canvas placeholder -->
+    <div id="screen"></div>
+
+    <!-- melonJS Library -->
+    <script type="text/javascript" src="js/melonJS-min.js"></script>
+    <script type="text/javascript" src="build/clumsy-min.js"></script>
+    <script type="text/javascript">
+      window.onReady(function onReady() {
+        game.onload();
+      });
+    </script>
+  </body>
 </html>
