--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
   <body>
     <!--
+        Godt forsøk!
+        Anyways, here are the credits!
+
         /* ORIGINAL CODE */
         Developer: Ellison Leão 
         Site: https://ellisonleao.github.io, https://github.com/ellisonleao
@@ -51,6 +54,7 @@
         /* TEXTURES */
         Cloud Tileset.png: ohnoponogames, https://ohnoponogames.itch.io/retro-cloud-tileset
         Pixel Tree: Davide Pesce, https://www.davidepesce.com/2020/03/26/nature-pixel-art-tutorial-1-simple-tree/
+        Other textures: The secret santa, themselves
     -->
 
     <!-- Canvas placeholder -->
